# docs/swagger.json
@@ -16,5 +16,69 @@
     },
     "host": "ats-714220023-serlipariela-38bba14820aa.herokuapp.com",
     "basePath": "/",
-    "paths": {}
+    "paths": {
+        "/customer": {
+            "get": {
+                "description": "Mengambil semua data customer.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Get All Data Customer.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.Customer"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "controller.Customer": {
+            "type": "object",
+            "properties": {
+                "_id": {
+                    "type": "string"
+                },
+                "alamat": {
+                    "type": "string"
+                },
+                "deskripsi": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "gambar": {
+                    "type": "string"
+                },
+                "harga": {
+                    "type": "integer"
+                },
+                "nama": {
+                    "type": "string"
+                },
+                "nama_produk": {
+                    "type": "string"
+                },
+                "phone_number": {
+                    "type": "string"
+                },
+                "stok": {
+                    "type": "string"
+                }
+            }
+        }
+    }
 }
